Changelog
=========

9.2-dev - (unreleased)
----------------------
* Bug fix: resizing the window on fullscreen no longer displays the content
  outside of the TinyMCE fullscreen div
  [ichimdav refs #18223]

9.1 - (2014-02-03)
------------------
* Bug fix: improved presentation mode. removed authorname. cover image now
  fits in first slide.
  [demarant refs #16916]
* Bug fix: Properly closed comment in difftool styling
  [olimpiurob refs #17702]
* [DONE] Upgrade step: from www/portal_tinymce/@@tinymce-controlpanel:
  - Run it only after upgrading eea.design through the automatic upgrade step
  - Move plonestyle editor plugin to the left select form in order to disable it
  - replace the styles from the layout tab with the list found within the ticket
    as attachment
  [ichimdav refs #18180]
* [DONE] Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #18180]
* Change: removed tiny_mce.js from eea.design, opting to move the fixes directly
  to Products.TinyMCE
  [ichimdav refs #18200]
* Bug fix: preserve TinyMCE width when resizing browser window
  [ichimdav refs #18189]
* Bug fix: avoid page-break-inside portal messages in PDF printing
  [demarant]
* Bug fix: prefix contenttype classes from eea-base in order to override base
  classes
  [ichimdav refs #17959]

9.0 - (2014-01-22)
------------------
* Feature: Improvements to the tinymce fullscreen mode
  center editor since we have a fixed width layout
  [demarant fixes #18086]
* Change: reference the context using only context within main_template instead
  of here
  [ichimdav refs #18064]
* Feature: Make diff tool styling more familiar to users
  [olimpiurob #17702]
* Bug fix: TinyMCE now checks for Range.prototype with Firefox in order to avoid
  missing body text
  [ichimdav refs #17394]
* Bug fix: prefix eea-icon classes when used on accordion so that they may not
  override the icon closses of the accordion body
  [ichimdav refs #17729]