@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
    <description>EEA Design profile</description>
-   <version>9.1</version>
+   <version>9.2</version>
    <dependencies>
         <dependency>profile-Products.EEAPloneAdmin:default</dependency>
         <dependency>profile-Products.NavigationManager:default</dependency>
