@@ -3,6 +3,12 @@ Changelog
 
 9.2-dev - (unreleased)
 ----------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for eea.design
+  [ichimdav refs #18223]
+* Feature: added TinyMCE eeatogglefullscreen plugin which for now exits
+  fullscreen when clicking outside the editor area
+  [ichimdav refs #18223]
 * Bug fix: resizing the window on fullscreen no longer displays the content
   outside of the TinyMCE fullscreen div
   [ichimdav refs #18223]
